<resources>
    <string name="app_name">ExcecutiveSchedulerGO</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="createEvent">Create Event</string>
    <string name="calendar">Calendar</string>
    <string name="loginSuccess">Login Successful</string>
    <string name="loginFail">Login Failed</string>
    <string name="registerFail">Failed to register</string>
    <string name="title_activity_create_event">CreateEventActivity</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="create">Create</string>
    <string name="confirm">Confirm</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="tvname">tvname</string>
    <string name="hello_landscape">Landscape</string>
    <string name="hello_portrait">Portrait</string>
    <string name="prev">Previous</string>
    <string name="next">Next</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="cancel">Cancel</string>
</resources>

