<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CreateEventActivity"
    tools:showIn="@layout/activity_create_event">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <!--<LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="left">
        -->
        <Button
            android:id="@+id/create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"/>
            <EditText
                android:id="@+id/create_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title" />
            <EditText
                android:id="@+id/create_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"/>
<!--
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
-->
            <DatePicker
                android:id="@+id/create_startDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startDate"
                android:datePickerMode="spinner" />
            <DatePicker
                android:id="@+id/create_endDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/endDate"/>

<!--
        </LinearLayout>
-->
    </LinearLayout>

</android.support.constraint.ConstraintLayout>